<resources>
    <string name="preference_file_key">com.dorfer.scheduler_pomodoro</string>

    <string name="app_name">scheduler_pomodoro</string>
    <string name="task_hint">введите какое-нибудь задание</string>
    <string name="add_btn">Add</string>
    <string name="something_btn">something</string>
    <string name="calendar">set date</string>
    <string name="start_pomodoro">start pomodoro</string>
    <string name="day">5 сентября 2020</string>
    <string name="add_new_item_title">Add new task</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="set_start_time">Set time</string>
    <string name="set_duration">Set duration</string>
    <string name="zero_time">00</string>

    <string name="pomodoro_title">Pomodoro</string>
    <string name="pomodoro_settings">Settings</string>

    <string name="timer">Timer</string>
    <string name="pomodoro_work_duration">Work Duration</string>
    <string name="pomodoro_break_duration">Break Duration</string>
    <string name="pomodoro_title_notifications">Notifications</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="duration_picker_title">Choose duration</string>
    <string name="duration_picker_message">In minutes</string>

    <string name="pomodoro_notification_title">Pomodoro</string>
    <string name="pomodoro_notification_text">Time is over!</string>

    <string name="set_notification">Set notification</string>
</resources>
