<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_shape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:text="@string/set_duration"
        android:textSize="@dimen/duration_size"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/add_hour"
                android:layout_width="@dimen/double_duration_size"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_value" />

            <TextView
                android:id="@+id/duration_hours"
                android:layout_width="@dimen/double_duration_size"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="2"
                android:text="@string/zero_time"
                android:textSize="@dimen/duration_size"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/reduce_hour"
                android:layout_width="@dimen/double_duration_size"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reduce_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/add_minute"
                android:layout_width="@dimen/double_duration_size"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_value" />

            <TextView
                android:id="@+id/duration_minutes"
                android:layout_width="@dimen/double_duration_size"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="2"
                android:text="@string/zero_time"
                android:textSize="@dimen/duration_size"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/reduce_minute"
                android:layout_width="@dimen/double_duration_size"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reduce_value" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/cancel_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/done_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>